Added prefix to paths, e.g. /rpc/call_function

--- a/internal/gen/openapi/openapi.json.tmpl
+++ b/internal/gen/openapi/openapi.json.tmpl
@@ -6,7 +6,7 @@
   },
   "paths": {
 {{- range $i, $rpc := .RPCs}}
-    "/{{rpcRoute $rpc.Name}}": {
+    "{{rpcRoute $rpc.Name}}": {
       "post": {
         "operationId": "{{rpcMethodName $rpc.Name}}",
 {{- if hasParameters $rpc}}
