--- a/internal/gen/openapi/openapi.json.tmpl
+++ b/internal/gen/openapi/openapi.json.tmpl
@@ -31,6 +31,56 @@
                 }
               }
             }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/{{errorSchemaName}}"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/{{errorSchemaName}}"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/{{errorSchemaName}}"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/{{errorSchemaName}}"
+                }
+              }
+            }
+          },
+          "501": {
+            "description": "Not Implemented",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/{{errorSchemaName}}"
+                }
+              }
+            }
           }
         }
       }
@@ -66,6 +116,29 @@
           "{{resultField $rpc.Returns}}": {{schemaJSON $rpc.Returns}}
         }
       }{{if lt (add $i 1) (len $.RPCs)}},{{end}}
+{{- end}}
+{{- if gt (len $.RPCs) 0}}
+      ,
+      "{{errorSchemaName}}": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string",
+            "enum": [
+              "custom",
+              "validation",
+              "input",
+              "unauthorized",
+              "forbidden",
+              "not_implemented"
+            ]
+          },
+          "message": {
+            "type": "string"
+          }
+        },
+        "required": ["type", "message"]
+      }
 {{- end}}
     }
   }
