Fixed 'EmptyModel' has no attribute 'from_dict'

--- a/internal/gen/python/client.py.tmpl
+++ b/internal/gen/python/client.py.tmpl
@@ -80,7 +80,10 @@ class {{className $model.Name}}:
 {{- end}}
         )
 {{- else}}
-    pass
+    @staticmethod
+    def from_dict(data: Dict[str, Any]) -> "{{className $model.Name}}":
+        _ = data
+        return {{className $model.Name}}()
 {{- end}}
 
 {{- end}}
