--- a/internal/gen/go/server.go.tmpl
+++ b/internal/gen/go/server.go.tmpl
@@ -1,6 +1,7 @@
 package {{.Package}}
 
 import (
+	"context"
 	"encoding/json"
 	"errors"
 	"io"
@@ -33,7 +34,7 @@ type {{rpcResultName $rpc.Name}} struct {
 
 type RPCHandler interface {
 {{- range $rpc := .RPCs}}
-	{{rpcMethodName $rpc.Name}}({{rpcParamsName $rpc.Name}}) ({{rpcResultName $rpc.Name}}, error)
+	{{rpcMethodName $rpc.Name}}(context.Context, {{rpcParamsName $rpc.Name}}) ({{rpcResultName $rpc.Name}}, error)
 {{- end}}
 }
 
@@ -58,7 +59,7 @@ func {{rpcHandlerName $rpc.Name}}(rpc RPCHandler) http.Handler {
 			return
 		}
 		{{- end}}
-		res, err := rpc.{{rpcMethodName $rpc.Name}}(params)
+		res, err := rpc.{{rpcMethodName $rpc.Name}}(r.Context(), params)
 		if err != nil {
 			writeError(w, err)
 			return
