--- a/internal/gen/openapi/openapi.json.tmpl
+++ b/internal/gen/openapi/openapi.json.tmpl
@@ -113,7 +113,9 @@
       "{{resultSchemaName $rpc.Name}}": {
         "type": "object",
         "properties": {
+{{- if hasReturn $rpc}}
           "{{resultField $rpc.Returns}}": {{schemaJSON $rpc.Returns}}
+{{- end}}
         }
       }{{if lt (add $i 1) (len $.RPCs)}},{{end}}
 {{- end}}
