--- a/internal/gen/go/client.go.tmpl
+++ b/internal/gen/go/client.go.tmpl
@@ -126,6 +126,7 @@ type RPCClient struct {
 	baseURL string
 	client  *http.Client
 	headers map[string]string
+	bearerToken string
 }
 
 func NewRPCClient(baseURL string) *RPCClient {
@@ -153,6 +154,11 @@ func NewRPCClientWithHTTPAndHeaders(baseURL string, client *http.Client, headers
 		client:  client,
 		headers: copiedHeaders,
 	}
+}
+
+func (c *RPCClient) WithBearerToken(token string) *RPCClient {
+	c.bearerToken = token
+	return c
 }
 
 {{- range $rpc := .RPCs}}
@@ -225,6 +231,18 @@ func (c *RPCClient) doRequest(ctx context.Context, path string, payload any, out
 		return fmt.Errorf("create request: %w", err)
 	}
 	req.Header.Set("Content-Type", "application/json")
+	if c.bearerToken != "" {
+		hasAuthHeader := false
+		for key := range c.headers {
+			if http.CanonicalHeaderKey(key) == "Authorization" {
+				hasAuthHeader = true
+				break
+			}
+		}
+		if !hasAuthHeader {
+			req.Header.Set("Authorization", "Bearer "+c.bearerToken)
+		}
+	}
 	for key, value := range c.headers {
 		req.Header.Set(key, value)
 	}
