--- a/internal/gen/typescript/client.ts.tmpl
+++ b/internal/gen/typescript/client.ts.tmpl
@@ -1,93 +1,31 @@
-// THIS CODE IS GENERATED
-
-{{- if .Zod}}
-import { z } from "zod";
-
+import {
+	ERROR_EXCEPTIONS,
+	RPCError,
+	RPCErrorException,
+} from "./errors";
+{{- if hasTypes .}}
+import type {
+{{- range $model := .Models}}
+	{{className $model.Name}},
 {{- end}}
-export type RPCErrorType =
-	| "custom"
-	| "validation"
-	| "input"
-	| "unauthorized"
-	| "forbidden"
-	| "not_implemented";
-
-export interface RPCError {
-	type: RPCErrorType;
-	message: string;
-}
-
-export class RPCErrorException extends Error {
-	readonly error: RPCError;
-
-	constructor(error: RPCError) {
-		super(error.message);
-		this.error = error;
-	}
-}
-
-export class CustomRPCError extends RPCErrorException {}
-export class ValidationRPCError extends RPCErrorException {}
-export class InputRPCError extends RPCErrorException {}
-export class UnauthorizedRPCError extends RPCErrorException {}
-export class ForbiddenRPCError extends RPCErrorException {}
-export class NotImplementedRPCError extends RPCErrorException {}
-
-const ERROR_EXCEPTIONS: Record<string, typeof RPCErrorException> = {
-	custom: CustomRPCError,
-	validation: ValidationRPCError,
-	input: InputRPCError,
-	unauthorized: UnauthorizedRPCError,
-	forbidden: ForbiddenRPCError,
-	not_implemented: NotImplementedRPCError,
-};
-
-{{- range $index, $model := .Models}}
-{{- if gt $index 0}}
-
-{{- end}}
-export interface {{className $model.Name}} {
-{{- if hasModelFields $model}}
-{{- range $field := $model.Fields}}
-	{{jsonName $field.Name}}{{if $field.Type.Optional}}?{{end}}: {{tsType $field.Type}};
-{{- end}}
-{{- end}}
-}
-{{- if $.Zod}}
-
-export const {{className $model.Name}}Schema = z.object({
-{{- if hasModelFields $model}}
-{{- range $field := $model.Fields}}
-	{{jsonName $field.Name}}: {{zodType $field.Type}}{{if $field.Type.Optional}}.optional(){{end}},
-{{- end}}
-{{- end}}
-});
-{{- end}}
-{{- end}}
-
 {{- range $rpc := .RPCs}}
-
 {{- if hasParameters $rpc}}
-export interface {{rpcParamsName $rpc.Name}} {
-{{- range $param := $rpc.Parameters}}
-	{{jsonName $param.Name}}{{if $param.Type.Optional}}?{{end}}: {{tsType $param.Type}};
+	{{rpcParamsName $rpc.Name}},
 {{- end}}
-}
-{{- if $.Zod}}
-
-export const {{rpcParamsName $rpc.Name}}Schema = z.object({
-{{- range $param := $rpc.Parameters}}
-	{{jsonName $param.Name}}: {{zodType $param.Type}}{{if $param.Type.Optional}}.optional(){{end}},
-{{- end}}
-});
-{{- end}}
-{{- end}}
-
 {{- if hasReturn $rpc}}
-export interface {{rpcResultName $rpc.Name}} {
-	{{resultField $rpc.Returns}}: {{tsType $rpc.Returns}};
-}
+	{{rpcResultName $rpc.Name}},
 {{- end}}
+{{- end}}
+} from "./models";
+{{- end}}
+{{- if .Zod}}
+import {
+{{- range $rpc := .RPCs}}
+{{- if hasParameters $rpc}}
+	{{rpcParamsName $rpc.Name}}Schema,
+{{- end}}
+{{- end}}
+} from "./models";
 {{- end}}
 
 export interface RPCClientOptions {
